Fix v-align

--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ a, a:hover, a:visited {
 }
 @media only screen and (max-height: 350px), @media only screen and (max-device-height: 350px) {
 	.main {
-		top:10%;
+		margin-top:-50px;
 	}
 	.main h1 {
 		font-size: 2.5em !important;
